deploy/k8s/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
      - name: celery-beat
        image: [image]
        # imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /home/mediacms.io/mediacms/media_files
          name: mediacms
          subPath: media_files
        # - mountPath: /home/mediacms.io/mediacms/cms/settings.py
        #   name: settings
        #   subPath: settings.py
      volumes:
        - name: mediacms
          persistentVolumeClaim:
              claimName: mediacms      
        - name: settings
          configMap:
            name: settings-py
