deploy/k8s/celery-worker-short.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-short
spec:
  selector:
    matchLabels:
      app: celery-worker-short
  template:
    metadata:
      labels:
        app: celery-worker-short
    spec:
      containers:
      - name: celery-worker-short
        image: [image]
        #image: mediacms/mediacms
        command: [ "/bin/bash","-c" ]
        args:
          - 
            mkdir -p /home/mediacms.io/mediacms/cms/;
            cp /cms/settings.py /home/mediacms.io/mediacms/cms/settings.py;
            ./deploy/docker/entrypoint.sh ./deploy/docker/start.sh
        # imagePullPolicy: Always
        resources:
          requests:
            memory: "1000Mi"
            cpu: "500m" 
          limits:
            memory: "2000Mi"
            cpu: "800m"
        volumeMounts:
        - mountPath: /home/mediacms.io/mediacms/media_files
          name: mediacms
          subPath: media_files
        - mountPath: /home/mediacms.io/mediacms/logs
          name: mediacms
          subPath: logs  
        - mountPath: /cms/settings.py
          name: settings
          subPath: settings.py
      volumes:
        - name: mediacms
          persistentVolumeClaim:
              claimName: mediacms
        - name: settings
          configMap:
            name: settings-py
