deploy/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: [image]
        # imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - name: web
          containerPort: 80
        - name: uwsgi
          containerPort: 9000
          
        
      #   - name: TASK
      #     value: worker  
        volumeMounts:
          - mountPath: /home/mediacms.io/mediacms/media_files
            name: mediacms
            subPath: media_files
          - mountPath: /home/mediacms.io/mediacms/logs
            name: mediacms
            subPath: logs
            
      volumes:
        - name: mediacms
          persistentVolumeClaim:
              claimName: mediacms
